# beachPatrol

./: .env.sample  .gitignore  cookies.txt.sample  pyproject.toml
src/: article.py  bot.py  twitter.py  worker.py  youtube.py
